--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
+        "laravelcollective/html": "^6.3",
         "maatwebsite/excel": "^3.1",
         "psr/simple-cache": "^2.0",
         "realrashid/sweet-alert": "^5.1"
